--- a/tuCodigo/tucodigo_front/src/index.html
+++ b/tuCodigo/tucodigo_front/src/index.html
@@ -16,6 +16,8 @@
   <app-root></app-root>
 
   <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  
 </body>
 </html>
