--- a/tuCodigo/tucodigo_front/src/index.html
+++ b/tuCodigo/tucodigo_front/src/index.html
@@ -13,7 +13,70 @@
 
 </head>
 <body>
-  <app-root></app-root>
+  <app-root> 
+     <div class="loadingio-spinner-dual-ring-x6yyyzq9s9"><div class="ldio-dmm78f33jno">
+        <div></div><div><div></div></div>
+        </div></div>
+        <style type="text/css">
+        @keyframes ldio-dmm78f33jno {
+          0% { transform: rotate(0) }
+          100% { transform: rotate(360deg) }
+        }
+        .ldio-dmm78f33jno div { box-sizing: border-box!important }
+        .ldio-dmm78f33jno > div {
+          position: absolute;
+          width: 144px;
+          height: 144px;
+          top: 28px;
+          left: 28px;
+          border-radius: 50%;
+          border: 16px solid #000;
+          border-color: #ffc107 transparent #ffc107 transparent;
+          animation: ldio-dmm78f33jno 1s linear infinite;
+        }
+        .ldio-dmm78f33jno > div:nth-child(2) { border-color: transparent }
+        .ldio-dmm78f33jno > div:nth-child(2) div {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          transform: rotate(45deg);
+        }
+        .ldio-dmm78f33jno > div:nth-child(2) div:before, .ldio-dmm78f33jno > div:nth-child(2) div:after { 
+          content: "";
+          display: block;
+          position: absolute;
+          width: 16px;
+          height: 16px;
+          top: -16px;
+          left: 48px;
+          background: #ffc107;
+          border-radius: 50%;
+          box-shadow: 0 128px 0 0 #ffc107;
+        }
+        .ldio-dmm78f33jno > div:nth-child(2) div:after { 
+          left: -16px;
+          top: 48px;
+          box-shadow: 128px 0 0 0 #ffc107;
+        }
+        .loadingio-spinner-dual-ring-x6yyyzq9s9 {
+          width: 200px;
+          height: 200px;
+          display: inline-block;
+          overflow: hidden;
+          background: #0b3c5d;
+        }
+        .ldio-dmm78f33jno {
+          width: 100%;
+          height: 100%;
+          position: relative;
+          transform: translateZ(0) scale(1);
+          backface-visibility: hidden;
+          transform-origin: 0 0; 
+        }
+        .ldio-dmm78f33jno div { box-sizing: content-box; }
+       
+        </style>
+  </app-root>
 
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
