--- a/tuCodigo/tucodigo_front/src/index.html
+++ b/tuCodigo/tucodigo_front/src/index.html
@@ -1,29 +1,39 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TucodigoFront</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
-    
-  />
-
-</head>
-<body>
-  <app-root> 
-     <div class="loadingio-spinner-dual-ring-x6yyyzq9s9"><div class="ldio-dmm78f33jno">
-        <div></div><div><div></div></div>
-        </div></div>
-        <style type="text/css">
+  <head>
+    <meta charset="utf-8" />
+    <title>TucodigoFront</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="assets/img/logo2.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+    />
+  </head>
+  <body>
+    <app-root>
+      <div
+        class="loadingio-spinner-dual-ring-x6yyyzq9s9"
+        style="height: 100vh; width: 100vw; position: absolute;"
+      >
+        <div class="ldio-dmm78f33jno" style="top:40%; left: 40%;">
+          <div></div>
+          <div><div></div></div>
+        </div>
+      </div>
+      <style type="text/css">
         @keyframes ldio-dmm78f33jno {
-          0% { transform: rotate(0) }
-          100% { transform: rotate(360deg) }
+          0% {
+            transform: rotate(0);
+          }
+          100% {
+            transform: rotate(360deg);
+          }
         }
-        .ldio-dmm78f33jno div { box-sizing: border-box!important }
+        .ldio-dmm78f33jno div {
+          box-sizing: border-box !important;
+        }
         .ldio-dmm78f33jno > div {
           position: absolute;
           width: 144px;
@@ -35,14 +45,17 @@
           border-color: #ffc107 transparent #ffc107 transparent;
           animation: ldio-dmm78f33jno 1s linear infinite;
         }
-        .ldio-dmm78f33jno > div:nth-child(2) { border-color: transparent }
+        .ldio-dmm78f33jno > div:nth-child(2) {
+          border-color: transparent;
+        }
         .ldio-dmm78f33jno > div:nth-child(2) div {
           position: absolute;
           width: 100%;
           height: 100%;
           transform: rotate(45deg);
         }
-        .ldio-dmm78f33jno > div:nth-child(2) div:before, .ldio-dmm78f33jno > div:nth-child(2) div:after { 
+        .ldio-dmm78f33jno > div:nth-child(2) div:before,
+        .ldio-dmm78f33jno > div:nth-child(2) div:after {
           content: "";
           display: block;
           position: absolute;
@@ -54,7 +67,7 @@
           border-radius: 50%;
           box-shadow: 0 128px 0 0 #ffc107;
         }
-        .ldio-dmm78f33jno > div:nth-child(2) div:after { 
+        .ldio-dmm78f33jno > div:nth-child(2) div:after {
           left: -16px;
           top: 48px;
           box-shadow: 128px 0 0 0 #ffc107;
@@ -72,16 +85,16 @@
           position: relative;
           transform: translateZ(0) scale(1);
           backface-visibility: hidden;
-          transform-origin: 0 0; 
+          transform-origin: 0 0;
         }
-        .ldio-dmm78f33jno div { box-sizing: content-box; }
-       
-        </style>
-  </app-root>
+        .ldio-dmm78f33jno div {
+          box-sizing: content-box;
+        }
+      </style>
+    </app-root>
 
-  <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  
-</body>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  </body>
 </html>
